<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WorxPoll</string>

    <!-- Screen 1 PollerDetails -->
    <string name="event_title">Title</string>
    <string name="event_location">Location</string>
    <string name="organizer_name">Name</string>
    <string name="organizer_email">Email</string>
    <string name="btn_create_poll">Create Poll</string>

    <!-- Screen 2 CalendarDetails -->
    <string name="event_date">Calendar</string>
    <string name="dates_selected">Dates Selected</string>
    <string name="btn_add_time">Add Time</string>

    <!-- Screen 2 Add Timing -->
    <string name="btn_send_poll">Send Poll</string>

    <!-- DeleteDialog Fragment -->
    <string name="dialog_delete_event">Are you sure you want to delete this event?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <!-- PollParticipant poll_response -->
    <string name="title_poll_detail">Poll Detail</string>
    <string name="organizer">Organizer</string>
    <string name="empty_list">No results</string>

    <!-- Settings -->
    <string name="action_settings">Settings</string>
    <string name="action_about_app">About</string>
    <string name="action_logout">Log Out</string>
    <string name="action_create_poll">Create Poll</string>

    <!-- Preferences -->
    <string name="push_notifications">NOTIFY WHEN</string>
    <string name="individual_response_preference">Someone responds to a poll</string>
    <string name="individual_response_summary">When each person responds to a poll</string>
    <string name="all_responses_preference">All responses received</string>
    <string name="all_responses_summary">When all responses to a poll are received</string>

</resources>